--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,8 @@
     "purescript-unfoldable": "^3.0.0",
     "purescript-dom": "^4.10.0",
     "purescript-behaviors": "^5.1.0",
-    "purescript-node-http": "^4.1.0"
+    "purescript-node-http": "^4.1.0",
+    "purescript-smolder": "^10.2.0",
+    "purescript-smolder-dom": "^2.0.0"
   }
 }
