--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/i-am-tom/perusal#readme",
   "dependencies": {
     "jquery": "^3.2.1",
+    "pulp": "^12.0.1",
+    "purescript": "^0.11.6",
     "socket.io": "^2.0.4"
   }
 }
